MySQL 연동 및 기타 작업

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,10 @@ repositories {
 }
 
 dependencies {
+	// MySQL 연동
+	implementation 'com.mysql:mysql-connector-j'
+
+	// 롬복 관련
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
