--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,14 @@
 spring.application.name=SpringBoot_Practice
 server.servlet.encoding.force=true
+
+# ??? ?? ?? ??
+logging.level.org.hibernate.SQL=DEBUG
+
+# ?? ???
+spring.jpa.properties.hibernate.format_sql=true
+
+# MySQL ??
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/testdb
+spring.datasource.username=root
+spring.datasource.password=1234
